# Fidelis

./: .editorconfig  .gitignore  LICENSE  LICENSES.md  Makefile  README.md  SYNTHESIS_CONSTITUTION.md  __init__.py  attest-adversarial-corpus.md  attest-gap-ledger.md  attest-profile-default-v02.json  attest-serialized-examples.md  attest-signature-schemes-note.md  attest-spec.md  attest-v0.2-delta.md  attest.txt  attest_ref_impl.py  attest_test_harness.py  efm_council.py  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml  report.py  run_regression_harness.py
Reasoning/: check_sophron_audit_attack_matrix.py  check_sophron_audit_attack_results.py  check_sophron_audit_jsonl_schema.py  check_sophron_competing_hypotheses.py  check_sophron_elastic_budget_compliance.py  check_sophron_probe_budget_results.py  check_sophron_probe_jsonl_schema.py  check_sophron_probe_target10.py  check_sophron_skew_jsonl_schema.py  check_sophron_uncertainty_ledger.py  sophron_regression_delta_checker.py
artifacts/: ai-legal-personhood-debate-input.json  ai-personhood-anti-input.json
cases/: 1.txt  CALIBRATION_LOG_SECOND_PASS.md  CASE-007_ford_pinto.md  CASE-007_prompt.txt  CASE-008_noble_cause_corruption.md  CASE-009_guevara_false_confession.md  CASE-009_prompt.txt  CASE-010_prompt.txt  CASE-011_central_park_five_false_confession.md  CASE-011_prompt.txt  CASE-012_prompt.txt  CASE-013_peace_investigative_interview.md  CASE-013_prompt.txt  CASE-015_prompt.txt  CASE-015_tuvix_personhood.md  CASE_TEMPLATE.md  GOV-001_prompt.txt  INS-002_broad_hold_harmless_construction.md  INS-004_prompt.txt  NEG-001_prompt.txt  NEG-002_proportionate_indemnity_tied_to_control.md  NEG-003_legitimate_solvency_discipline.md  NEG-003_prompt.txt  REL-001_prompt.txt  REL-002_revolving_door_advisory_opacity.md  ST-003_in_the_pale_moonlight.md  ST-005_homeward.md  STAR_TREK_CASE_INDEX.md  disambig_consent_removal_optin_prompt.txt  disambig_consent_removal_surveillance_prompt.txt  expectations.yaml  gold_emergency_governance_tradeoff_prompt.txt  gold_end_of_life_parental_conflict_prompt.txt  gold_euthanasia_medical_vs_dignity_prompt.txt  gold_personhood_android_prompt.txt  gold_rescue_vs_noninterference_prompt.txt  gold_trolley_rights_vs_utility_prompt.txt  negative_control_product_delay_prompt.txt  paired_messy_reorg_prompt.txt  tier_a_prompt_002.txt  (+1 more)
gaplog/: pyproject.toml
gaplog/examples/: github_actions.yml
gaplog/tests/: test_gaplog.py
(+213 files in other folders)
