[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trusted-runtime"
version = "0.1.0"
description = "Receipts-first orchestration layer integrating ethical hazard review, runtime gating, warrant assay, and evidence telemetry."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "rich>=13.0",
]

[project.scripts]
trusted-runtime = "trusted_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
