[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gaplog"
version = "0.1.1"
description = "Passive logger for the gap between agent self-reports and independently verified world state"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["gaplog*"]
